# yt-history

./: .gitignore  DESIGN_DOC.md  dashboard.py  db.py  main.py  pyproject.toml  requirements.txt  tracker.py
data/: .gitkeep
engine/: fingerprinter.py  scraper.py  worker.py
tests/: conftest.py  test_db.py  test_tracker.py
views/: channels.py  history.py  overview.py
