[project]
name = "youtube-history-tracker"
version = "0.1.0"
description = "YouTube history and metadata tracking utility."
readme = "DESIGN_DOC.md"
requires-python = ">=3.14"
dependencies = [
    "imagehash>=4.3.2",
    "pandas>=3.0.2",
    "ruff>=0.15.12",
    "sqlite-utils>=3.39",
    "streamlit>=1.57.0",
    "yt-dlp>=2026.3.17",
]

[tool.ruff]
indent-width = 2
line-length = 80

[tool.ruff.lint]
select = [
  "E",  # pycodestyle errors
  "W",  # pycodestyle warnings
  "F",  # pyflakes
  "I",  # isort
  "B",  # flake8-bugbear
  "C4", # flake8-comprehensions
  "UP", # pyupgrade
]

[tool.ruff.format]
indent-style = "space"
quote-style = "double"